# CppRoboticAltPhase2

./: .gitignore  Dockerfile  GUIDE.md  SCHEME.md  TODO.md  flake.nix
.cache/clangd/index/: aruco_detector_node.cpp.A83D3B00757B0A11.idx
src/: HowToBuild.md
src/arena/: CMakeLists.txt  package.xml
src/arena/src/: arena_tracker_node.cpp
src/aruco_detector/: CMakeLists.txt  GUIDE.md
src/aruco_detector/launch/: aruco_launch.py
src/aruco_detector/src/: aruco_detector_node.cpp  camera_publisher_node.cpp
src/buzzer/: CMakeLists.txt  GUIDE.md  package.xml
src/buzzer/include/buzzer/: buzzer_node.hpp
src/buzzer/launch/: buzzer_launch.py
src/buzzer/src/: buzzer_node.cpp
src/camera/: CMakeLists.txt  package.xml
src/cpp_srvcli/: CMakeLists.txt  package.xml
src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
src/diff_drive/: CMakeLists.txt  GUIDE.md
src/diff_drive/src/: hardware_protection_node.cpp  motor_node.cpp  state_machine_node.cpp
src/ld06_lidar/: CMakeLists.txt  GUIDE.md  package.xml
src/ld06_lidar/include/ld06_lidar/: ld06_node.hpp  ld06_ros_node.hpp  ld06_serial_libserialport.hpp
src/ld06_lidar/launch/: ld06_launch.py
src/ld06_lidar/src/: ld06_node.cpp  ld06_ros_node.cpp  ld06_serial_libserialport.cpp
